[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/pickup.gd" type="Script" id=1]
[ext_resource path="res://sprites/Items/maca.png" type="Texture" id=2]
[ext_resource path="res://samples/coin.wav" type="AudioStream" id=3]
[ext_resource path="res://sprites/Particles/portal_yellowParticle.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 11.6412, 24.6133 )

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 10.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 120.0
initial_velocity_random = 0.65
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color = Color( 1, 1, 1, 0.723725 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Scale" ]

[sub_resource type="Animation" id=3]

resource_name = "move"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 20 ), Vector2( 0, 0 ) ]
}

[node name="pickup" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
fruit = 0

[node name="sprite" type="Sprite" parent="." index="0"]

modulate = Color( 1, 0.984375, 0.984375, 1 )
position = Vector2( 0, 20 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material" ]

[node name="shape" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -5.30737, -11.5108 )
scale = Vector2( 1, 0.409648 )
shape = SubResource( 1 )

[node name="pickup" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "fx"

[node name="queue_timer" type="Timer" parent="." index="3"]

process_mode = 0
wait_time = 2.0
one_shot = true
autostart = false

[node name="particles" type="Particles2D" parent="." index="4"]

position = Vector2( 1.99026, -0.663422 )
emitting = false
amount = 8
lifetime = 1.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.62
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 2 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Textures", "Time", "Transform" ]

[node name="animation" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/move = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[connection signal="body_entered" from="." to="." method="_on_pickup_body_entered"]

[connection signal="timeout" from="queue_timer" to="." method="_on_queue_timer_timeout"]


